Bug 485834 ObserverService shouldn't recurse infinitely for stupid consumers r=dougt